--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/Shared/HTFB.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/Shared/HTFB.cshtml
@@ -12,6 +12,8 @@
     <script src=@Url.Content("~/Areas/Business/Scripts/underscore.min.js")></script>
     <script src=@Url.Content("~/Areas/Business/Scripts/Business/Common/Common.js")></script>
     <script src="@Url.Content("~/Areas/Business/Scripts/Business/Common/XZQ.js")"></script>
+    <script src="@Url.Content("~/Areas/Business/Scripts/Business/Common/Top.js")"></script>
+    <script src="@Url.Content("~/Areas/Business/Scripts/Business/Common/LBHead.js")"></script>
     <script src=@Url.Content("~/Areas/Business/Scripts/Business/Common/Public_TP.js")></script>
     <script src=@Url.Content("~/Areas/Business/Scripts/Business/Common/Regular.js")></script>
     <script src=@Url.Content("~/Areas/Business/Scripts/Business/Common/Radio.js")></script>
@@ -23,10 +25,67 @@
     <script src=@Url.Content("~/Areas/Business/Scripts/UEditor/lang/zh-cn/zh-cn.js")></script>
     <script src="@Url.Content("~/Areas/Business/Scripts/UEditor/ueditor.js")"></script>
     <script src=@Url.Content("~/Areas/Business/Scripts/Business/Common/HTFB_Common.js")></script>
-
     @RenderSection("Section_Head", false)
 }
 @section Section_Body {
+    <div id="divTop" class="div_top">
+        <div class="div_top_left">
+            <span class="span_dqxzq" id="span_content_info_xzq">@ViewData["XZQ"]</span>
+            [<span class="span_qhcs" id="span_content_info_qhcs">切换城市</span>]
+        </div>
+        <div id="div_XZQ" class="div_dropdown">
+
+        </div>
+        <div class="div_top_right">
+            <span class="span_top_right">
+                信息小镇首页
+            </span>
+            <span class="span_top_right_split"></span>
+            <div class="div_top_right_inner">
+                <span class="span_top_right_sjdl"></span>
+                <span class="span_top_right">
+                    手机登录
+                </span>
+            </div>
+            <span class="span_top_right_split"></span>
+            <div class="div_top_right_inner" id="div_top_right_inner_yhm">
+                <span class="span_top_right span_top_right_yhm_text" id="span_top_right_yhm_text">@ViewData["YHM"]</span>
+                <span class="span_top_right_yhm" id="span_top_right_yhm_img"></span>
+                <div class="div_top_right_dropdown_yhm" id="div_top_right_dropdown_yhm">
+                    <ul class="ul_top_right_yhm">
+                        <li class="li_top_right_yhm" onclick="ShowWDXX()">我的信息</li>
+                        <li class="li_top_right_yhm" onclick="ShowWDZH()">我的账户</li>
+                        <li class="li_top_right_yhm" onclick="ShowWDZJ()">我的资金</li>
+                        <li class="li_top_right_yhm" onclick="ShowSHGJ()">生活工具</li>
+                        <li class="li_top_right_yhm" onclick="Exit()">退出</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div id="divLBHead" class="div_head">
+        <table class="table_head">
+            <tr>
+                <td>
+                    <div class="div_td_head">
+                        <div class="divstep" id="divLBXZ">
+                            <span class="spanstep" id="spanLBXZ"></span>
+                            <span class="span_cxlb" id="spanCXLB">重选类别</span>
+                            <em class="emstep" id="emLBXZ"></em>
+                        </div>
+                        <div class="divstep" id="divTXXX">
+                            <span class="spanstep" id="spanTXXX">2.填写信息</span>
+                            <em class="emstep" id="emTXXX"></em>
+                        </div>
+                        <div class="divstep" id="divWCFB">
+                            <span class="spanstep" id="spanWCFB">3.完成发布</span>
+                            <em class="emstep" id="emWCFB"></em>
+                        </div>
+                    </div>
+                </td>
+            </tr>
+        </table>
+    </div>
     @RenderSection("Section_Body", false)
     <div class="div_shadow" id="shadow"></div>
     <div id="editImgWindow">
