--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SWFW/SWFW_FLZX.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SWFW/SWFW_FLZX.cshtml
@@ -2,77 +2,12 @@
     ViewBag.Title = "SWFW_FLZX";
     Layout = "~/Areas/Business/Views/Shared/HTFB.cshtml";
 }
-
-<!DOCTYPE html>
-
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title></title>
+@section Section_Head {
     <link href="@Url.Content("~/Areas/Business/Css/HTFB/SWFW/SWFW_FLZX.css")" rel="stylesheet" />
     <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/HTFB/SWFW/SWFW_FLZX.js")"></script>
     <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/HTFB/SWFW/SWFW_FLZXYZ.js")"></script>
-</head>
-<body>
-    <div>
-        <div id="divTop" class="div_top" style="z-index: 1002; position:relative;">
-            <div class="div_top_left">
-                <span class="span_dqxzq" id="span_content_info_xzq">@ViewData["XZQ"]</span>
-                [<span class="span_qhcs" id="span_content_info_qhcs">切换城市</span>]
-            </div>
-            <div id="div_XZQ" class="div_dropdown">
-
-            </div>
-            <div class="div_top_right">
-                <span class="span_top_right">
-                    信息小镇首页
-                </span>
-                <span class="span_top_right_split"></span>
-                <div class="div_top_right_inner">
-                    <span class="span_top_right_sjdl"></span>
-                    <span class="span_top_right">
-                        手机登录
-                    </span>
-                </div>
-                <span class="span_top_right_split"></span>
-                <div class="div_top_right_inner" id="div_top_right_inner_yhm">
-                    <span class="span_top_right span_top_right_yhm_text" id="span_top_right_yhm_text">@ViewData["YHM"]</span>
-                    <span class="span_top_right_yhm" id="span_top_right_yhm_img"></span>
-                    <div class="div_top_right_dropdown_yhm" id="div_top_right_dropdown_yhm">
-                        <ul class="ul_top_right_yhm">
-                            <li class="li_top_right_yhm" onclick="ShowWDXX()">我的信息</li>
-                            <li class="li_top_right_yhm" onclick="ShowWDZH()">我的账户</li>
-                            <li class="li_top_right_yhm" onclick="ShowWDZJ()">我的资金</li>
-                            <li class="li_top_right_yhm" onclick="ShowSHGJ()">生活工具</li>
-                            <li class="li_top_right_yhm" onclick="Exit()">退出</li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div id="divLBHead" class="div_head">
-            <table class="table_head" style="width: 100%; text-align: center;">
-                <tr>
-                    <td class="headtd">
-                        <div style="width: 900px;">
-                            <div class="divstep" id="divLBXZ">
-                                <span class="spanstep" id="spanLBXZ"></span>
-                                <span id="spanCXLB" style="color: #5bc0de; cursor: pointer; font-size: 12px; margin-left: 2px">重选类别</span>
-                                <em class="emstep" id="emLBXZ"></em>
-                            </div>
-                            <div class="divstep" id="divTXXX">
-                                <span class="spanstep" id="spanTXXX">2.填写信息</span>
-                                <em class="emstep" id="emTXXX"></em>
-                            </div>
-                            <div class="divstep" id="divWCFB">
-                                <span class="spanstep" id="spanWCFB">3.完成发布</span>
-                                <em class="emstep" id="emWCFB"></em>
-                            </div>
-                        </div>
-                    </td>
-                </tr>
-            </table>
-        </div>
+}
+@section Section_Body {
         <div id="myTabContent" class="div_content">
             <div id="divJBXX" class="div_split" style="display: block; text-align: left">
                 <span class="span_split">基本信息</span>
@@ -254,6 +189,4 @@
                 <input type="button" class="btn btn-info input_text" style="height: 50px; font-size: 24px;" id="btnFB" value="发布" />
             </div>
         </div>
-    </div>
-</body>
-</html>
+}
