--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SY/SY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SY/SY.cshtml
@@ -4,7 +4,7 @@
 @section Section_Head {
     <meta name="viewport" content="width=device-width" />
     <title></title>
-    <link href="@Url.Content("~/Areas/Business/Css/SY.css")" rel="stylesheet" />
+    <link href="@Url.Content("~/Areas/Business/Css/Other/SY.css")" rel="stylesheet" />
     <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/Other/SY.js")"></script>
 }
 @section Section_Body {
