--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/LBXZ/LBXZ.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/LBXZ/LBXZ.cshtml
@@ -19,36 +19,27 @@
     <div>
         <div id="divTop" class="div_top">
             <div class="div_top_left">
-                <span class="span_dqxzq">@ViewData["XZQ"]</span>
-                [<span class="span_qhcs">切换城市</span>]
+                <span class="span_dqxzq" id="span_content_info_xzq">@ViewData["XZQ"]</span>
+                [<span class="span_qhcs" id="span_content_info_qhcs">切换城市</span>]
             </div>
             <div id="div_XZQ" class="div_dropdown">
             </div>
             <div class="div_top_right">
-                <span class="span_top_right">
-                    信息小镇首页
+                <span id="span_dl" class="span_top_right">
+                    登录
                 </span>
-                <em class="span_top_right_split"></em>
-                <div class="div_top_right_inner">
-                    <span class="span_top_right_sjdl"></span>
-                    <span class="span_top_right">
-                        手机登录
-                    </span>
-                </div>
+                <span class="span_top_right_fg">/</span>
+                <span id="span_zc" class="span_top_right">
+                    注册
+                </span>
                 <span class="span_top_right_split"></span>
-                <div class="div_top_right_inner" id="div_top_right_inner_yhm">
-                    <span class="span_top_right span_top_right_yhm_text" id="span_top_right_yhm_text">@ViewData["YHM"]</span>
-                    <span class="span_top_right_yhm" id="span_top_right_yhm_img"></span>
-                    <div class="div_top_right_dropdown_yhm" id="div_top_right_dropdown_yhm">
-                        <ul class="ul_top_right_yhm">
-                            <li class="li_top_right_yhm" onclick="ShowWDXX()">我的信息</li>
-                            <li class="li_top_right_yhm" onclick="ShowWDZH()">我的账户</li>
-                            <li class="li_top_right_yhm" onclick="ShowWDZJ()">我的资金</li>
-                            <li class="li_top_right_yhm" onclick="ShowSHGJ()">生活工具</li>
-                            <li class="li_top_right_yhm" onclick="Exit()">退出</li>
-                        </ul>
-                    </div>
-                </div>
+                <span id="span_grzx" class="span_top_right">
+                    个人中心
+                </span>
+                <span class="span_top_right_split"></span>
+                <span id="span_bzzx" class="span_top_right">
+                    帮助中心
+                </span>
             </div>
         </div>
         <div id="divLBHead" class="div_head">
