--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/Shared/HTFB.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/Shared/HTFB.cshtml
@@ -94,25 +94,85 @@
             <div id="btnClose"></div>
         </div>
         <div id="canvasFrame">
-            <canvas id="canvas" width="7850" height="4350" style="width:785px;height:435px;"></canvas>
+            <canvas id="canvas" width="7850" height="4350" style="width: 785px; height: 435px;"></canvas>
         </div>
         <div id="toolBar">
             <div id="editToolBar">
                 <div class="editToolButton" id="rotate">
-                    <div class="editButtonIcon" style="background-image:url(@Url.Content("~/Areas/Business/Css/images/rotate.png"))"></div>
+                    <div class="editButtonIcon" style="background-image: url(@Url.Content("~/Areas/Business/Css/images/rotate.png"))"></div>
                     <span>旋转</span>
                 </div>
                 <div class="editToolButton" id="clip">
-                    <div class="editButtonIcon" style="background-image:url(@Url.Content("~/Areas/Business/Css/images/clip.png"))"></div>
+                    <div class="editButtonIcon" style="background-image: url(@Url.Content("~/Areas/Business/Css/images/clip.png"))"></div>
                     <span>裁剪</span>
                 </div>
                 <div class="editToolButton" id="mosaic">
-                    <div class="editButtonIcon" style="background-image:url(@Url.Content("~/Areas/Business/Css/images/mosaic.png"))"></div>
+                    <div class="editButtonIcon" style="background-image: url(@Url.Content("~/Areas/Business/Css/images/mosaic.png"))"></div>
                     <span>模糊</span>
                 </div>
             </div>
         </div>
-        <input type="button" id="btnSavePhoto" class="btn btn-info" style="height: 34px; width:69px; position:absolute;bottom:14px;right:77px;" value="保&nbsp;&nbsp;存" />
+        <input type="button" id="btnSavePhoto" class="btn btn-info" style="height: 34px; width: 69px; position: absolute; bottom: 14px; right: 77px;" value="保&nbsp;&nbsp;存" />
+    </div>
+    <div id="myTabContent" class="tab-content">
+        <div id="username" style="display: block">
+            <table class="table" style="width: 600px;">
+                <tr>
+                    <td>
+                        <input type="text" class="form-control input_text" id="YHM" column="YHM" placeholder="请输入用户名">
+                    </td>
+                </tr>
+                <tr>
+                    <td class="Info" id="YHMInfo"></td>
+                </tr>
+                <tr>
+                    <td>
+                        <input type="password" class="form-control input_text" id="MM" column="MM" placeholder="请输入登录密码">
+                    </td>
+                </tr>
+                <tr>
+                    <td class="Info" id="MMInfo"></td>
+                </tr>
+                <tr>
+                    <td style="text-align: left">
+                        <input id="checkMMSFZDDL" type="checkbox" />
+                        <span class="spanZDDD">下次自动登录</span>
+                        <a id="aWJMM">忘记密码</a>
+                    </td>
+                </tr>
+                <tr>
+                    <td><input type="button" class="btn btn-info input_text" id="MMDL" value="登录" /></td>
+                </tr>
+            </table>
+        </div>
+        <div id="cellphone" style="display: none">
+            <table class="table" style="width: 600px;">
+                <tr>
+                    <td id="tdSJ">
+                        <input class="form-control input_text" id="SJ" maxlength="11" type="text" style="width: 266px;" column="SJ" placeholder="请输入手机号">
+                        <input type="button" class="btn btn-info" id="btnHQYZM" value="获取验证码" />
+                    </td>
+                </tr>
+                <tr>
+                    <td class="Info" id="SJInfo"></td>
+                </tr>
+                <tr>
+                    <td><input type="text" class="form-control input_text" id="YZM" column="YZM" placeholder="请输入验证码"></td>
+                </tr>
+                <tr>
+                    <td class="Info" id="YZMInfo"></td>
+                </tr>
+                <tr>
+                    <td style="text-align: left">
+                        <input id="checkSJSFZDDL" type="checkbox" />
+                        <span class="spanZDDD">下次自动登录</span>
+                    </td>
+                </tr>
+                <tr>
+                    <td><input type="button" class="btn btn-info input_text" id="SJDL" value="登录" /></td>
+                </tr>
+            </table>
+        </div>
     </div>
 }
 @RenderBody()
