--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/YHDL/YHDL.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/YHDL/YHDL.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "YHDLXX";
+    ViewBag.Title = "YHDL";
     Layout = "~/Areas/Business/Views/Shared/Other.cshtml";
 }
 
@@ -9,7 +9,7 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title></title>
-    <link href="@Url.Content("~/Areas/Business/Css/YHDL.css")" rel="stylesheet" />
+    <link href="@Url.Content("~/Areas/Business/Css/Other/YHDL.css")" rel="stylesheet" />
     <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/Other/YHDL.js")"></script>
 </head>
 <body>
