--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/Other/YHDL.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/Other/YHDL.css
@@ -1,89 +1,13 @@
-﻿body {
-    text-align: center;
-}
+﻿.div_head {width: 100%;height: 80px;display: block;padding-left: 80px;}
+.div_head .span_head_main_logo {background-image: url(../images/logo_blue.png);background-repeat: no-repeat;width: 155px;height: 55px;display: inline-block;margin-top: 10px;float: left;}
 
-.div_head {
-    width: 100%;
-    height: 80px;
-    display: block;
-    padding-left: 80px;
-}
+.em_head_split {height: 1px;width: 100%;display: block;margin-top: 10px;background-color: #31b0d5;}
 
-.div_body {
-    width: 100%;
-    display: block;
-    text-align: center;
-    background-image: url(images/yhdlxx_background.jpg);
-    padding-top: 45px;
-}
+.div_body {width: 100%;display: block;text-align: center;background-image: url(../images/yhdlxx_background.jpg);padding-top: 45px;}
+.div_body .div_body_yhdl {width: 460px;height: 420px;margin: 0 auto;background-color: #fff;border-radius: 4px;padding: 0 25px;box-shadow: 0px 0px 8px #888;}
+.div_body .div_body_yhdl .Info {font-size: 12px;width: 100%;height:20px;padding:0 10px !important;}
 
-.div_body_yhdl {
-    width: 460px;
-    height: 420px;
-    margin: 0 auto;
-    background-color: #fff;
-    border-radius: 4px;
-    padding: 0 25px;
-    box-shadow: 0px 0px 8px #888;
-}
-
-.span_head_main_logo {
-    background-image: url(images/logo_blue.png);
-    background-repeat: no-repeat;
-    width: 155px;
-    height: 55px;
-    display: inline-block;
-    margin-top: 10px;
-    float: left;
-}
-
-.em_head_split {
-    height: 1px;
-    width: 100%;
-    display: block;
-    margin-top: 10px;
-    background-color: #31b0d5;
-}
-
-.Info {
-    font-size: 12px;
-    width: 100%;
-    height:20px;
-    padding:0 10px !important;
-}
-
-.div_bottom {
-    border-top: 1px solid #cccccc;
-    display: block;
-    text-align: center;
-    height: 100px;
-    color: #333;
-    padding-top: 15px;
-    font-family: Microsoft YaHei, SimHei, Arial, Helvetica, sans-serif;
-    bottom: 0;
-    width: 100%;
-    position: absolute;
-    background-color: #000;
-    opacity: 0.5;
-    color: #fff;
-    line-height: 34px;
-}
-
-
-.span_div_bottom_inner {
-    font-size: 14px;
-    font-family: "Hiragino Sans GB", "Microsoft YaHei", "微软雅黑", tahoma, arial, simhei;
-}
-
-    .span_div_bottom_inner:hover {
-        cursor: pointer;
-        text-decoration: underline;
-    }
-
-.em_div_bottom_inner {
-    width: 1px;
-    background-color: #fff;
-    height: 9px;
-    margin: 2px 5px 0px 5px;
-    display: inline-block;
-}
+.div_bottom {border-top: 1px solid #cccccc;display: block;text-align: center;height: 100px;color: #333;padding-top: 15px;font-family: Microsoft YaHei, SimHei, Arial, Helvetica, sans-serif;bottom: 0;width: 100%;position: absolute;background-color: #000;opacity: 0.5;color: #fff;line-height: 34px;}
+.div_bottom .div_bottom_inner .span_div_bottom_inner {font-size: 14px;font-family: "Hiragino Sans GB", "Microsoft YaHei", "微软雅黑", tahoma, arial, simhei;}
+.div_bottom .div_bottom_inner .span_div_bottom_inner:hover {cursor: pointer;text-decoration: underline;}
+.div_bottom .div_bottom_inner .em_div_bottom_inner {width: 1px;background-color: #fff;height: 9px;margin: 2px 5px 0px 5px;display: inline-block;}
