--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/Common/HTFB_Common.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/Common/HTFB_Common.css
@@ -440,3 +440,6 @@
     left: 0;
     z-index: 1100;
 }
+
+.div_body_yhdl {position: absolute;top: 100px;z-index: 1101;display: none;width: 460px;height: 420px;margin: 0 auto;background-color: #fff;border-radius: 4px;padding: 0 25px;box-shadow: 0px 0px 8px #888;}
+.div_body_yhdl .Info {font-size: 12px;width: 100%;height:20px;padding:0 10px !important;}
