--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/Other/FBCG.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/Other/FBCG.css
@@ -29,7 +29,7 @@
     margin-left: -12px;
     width: 38px;
     height: 38px;
-    background: url(images/ok.png);
+    background: url(../images/ok.png);
 }
 
 .fbcg_info {
@@ -82,7 +82,7 @@
     height: 104px;
     width: 162px;
     display: block;
-    background-image: url(images/share.png);
+    background-image: url(../images/share.png);
     text-align: left;
 }
 
