--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/HTGL/HTGL.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/HTGL/HTGL.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "HTGL";
+    ViewBag.Title = "信息小镇_后台管理";
     Layout = "~/Areas/Business/Views/Shared/Other.cshtml";
 }
 <!DOCTYPE html>
