--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FCCX/FCCX_ZZF.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FCCX/FCCX_ZZF.cshtml
@@ -27,11 +27,8 @@
         </ul>
     </div>
     <div id="divConditionSelect" class="div_condition_select">
-        <ul class="ul_condition_select">
+        <ul id="ul_condition_select" class="ul_condition_select">
             <li class="li_condition_select_first">筛选条件</li>
-            <li class="li_condition_select"><span>仓山</span><em>x</em></li>
-            <li class="li_condition_select"><span>500-1000元</span><em>x</em></li>
-            <li class="li_condition_select"><span>整套出租</span><em>x</em></li>
         </ul>
     </div>
     <div id="divBody" class="div_body">
