--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/Shared/HTFB.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/Shared/HTFB.cshtml
@@ -89,7 +89,7 @@
     </div>
     @RenderSection("Section_Body", false)
     <div class="div_shadow" id="shadow"></div>
-    <div id="editImgWindow">
+    <div id="editImgWindow" class="div_img_window">
         <div id="editImgHead">
             <span>编辑图片</span>
             <div id="btnClose"></div>
