--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/CXLB/FCCX.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/CXLB/FCCX.css
@@ -45,7 +45,8 @@
 .div_body .ul_body_head {height: 40px;display: block;padding: 0;width: 100%;border-bottom: 1px solid #cccccc;}
 .div_body .ul_body_head .li_body_head {text-align: center;color: #999999;height: 40px;font-size: 16px;float: left;display: inline-block;padding: 6px 20px;}
 .div_body .ul_body_head .li_body_head:hover{ cursor: pointer;}
-.div_body .div_body_left{display: block;width: 980px;height: 1760px;}
+
+.div_body .div_body_left{display: inline-block;width: 980px;height: 1760px;}
 .div_body .div_body_left .ul_body_left{ height: 100%;width: 100%;padding: 0;}
 .div_body .div_body_left .ul_body_left .li_body_left{ width: 100%;height: 180px;border-bottom: 1px solid #e6e6e6;}
 .div_body .div_body_left .ul_body_left .li_body_left:hover{ background-color: #f9f9f9;}
@@ -59,3 +60,13 @@
 .div_body .div_body_left .ul_body_left .li_body_left .div_li_body_left_right{ width: 120px;height: 100%;display: inline-block;float: left;padding-top: 10px;}
 .div_body .div_body_left .ul_body_left .li_body_left .div_li_body_left_right .p_li_body_left_right{color: #ef6100;font-size: 16px;}
 .div_body .div_body_left .ul_body_left .li_body_left .div_li_body_left_right .p_li_body_left_right .span_zj{font-size: 28px;font-weight: 700;margin-right: 5px;}
+
+.div_body .div_body_right{display: inline-block;width: 200px;height: 1760px;}
+.div_body .div_body_right .p_div_body_right{ font-size: 18px;height: 30px;float: left;display: block;margin-left: 18px;}
+.div_body .div_body_right .ul_body_right{height: 100%;width: 100%;padding: 0;}
+.div_body .div_body_right .ul_body_right .li_body_right{width: 180px;height: 210px;border: 1px solid #e6e6e6;padding: 8px;float: left;margin-left: 18px;margin-bottom: 10px;}
+.div_body .div_body_right .ul_body_right .li_body_right:hover{ cursor: pointer;}
+.div_body .div_body_right .ul_body_right .li_body_right .img_li_body_right{ height: 120px;width: 100%;margin-bottom: 10px;}
+.div_body .div_body_right .ul_body_right .li_body_right .p_li_body_right_xq{ width: 100%;height: 20px;display: block;margin-bottom: 2px;font-size: 13px;}
+.div_body .div_body_right .ul_body_right .li_body_right .p_li_body_right_cs{ width: 100%;height: 20px;display: block;color: #999999;margin-bottom: 2px;font-size: 13px;}
+.div_body .div_body_right .ul_body_right .li_body_right .p_li_body_right_jg{width: 100%;height: 20px;display: block;color: #ef6100;font-size: 16px;margin-bottom: 2px;}
