--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FCXX/FCXX_ZZF.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FCXX/FCXX_ZZF.cshtml
@@ -19,4 +19,15 @@
             <li class="li_nav_font">@ViewData["XZQ"]整租房</li>
         </ul>
     </div>
+    <div id="divBody" class="div_body">
+        <div id="div_body_left" class="div_body_left">
+            <div class="div_body_left_head">
+                <p class="p_div_body_left_head_bt">大儒世家新出精装2房 高层设备齐全 别墅社区 品质 </p>
+                <p class="p_div_body_left_head_ll">11月5日 22:36 3次浏览 </p>
+            </div>
+        </div>
+        <div class="div_body_right">
+            
+        </div>
+    </div>
 }
