--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/XXXX/FCXX.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/XXXX/FCXX.css
@@ -1,2 +1,23 @@
-﻿body {
-}
+﻿body {width: 100%;height: 100%;overflow-x: hidden;background-color: #eeeff1;}
+
+/*首页_头部*/
+.div_head {background-color: #ffffff;width: 1200px;height: 100px;padding-top: 10px;}
+
+/*首页_头部_左侧*/
+.div_head_left {float: left;width: 120px;margin-top: 5px;}
+.div_head_left .img_head_left_logo {width: 100%;text-align: center;color: white;font-size: 25px;float: left;width: 155px;height: 55px;}
+
+
+.div_nav { width: 1200px;height: 28px;display: block;}
+.div_nav .ul_nav { width: 100%;padding: 0;}
+.div_nav .ul_nav .li_nav_font{ float: left;font-size: 13px;}
+.div_nav .ul_nav .li_nav_split{ float: left;margin-left: 10px;margin-right: 10px;}
+
+.div_body{display: block;width: 1200px;height: 1000px;background-color: #ffffff;}
+.div_body .div_body_left{display: inline-block;width: 880px;height: 1000px;background-color: #ffffff;float: left;padding: 10px;}
+.div_body .div_body_left .div_body_left_head{ height: 135px;width: 100%;border-bottom: 1px solid #cccccc;}
+.div_body .div_body_left .div_body_left_head .p_div_body_left_head_bt{ display: block;font-size: 20px;font-weight: 700;height: 40px;padding: 10px;}
+.div_body .div_body_left .div_body_left_head .p_div_body_left_head_ll{ display: block;color: #999999;height: 40px;padding: 10px;}
+
+
+.div_body .div_body_right{display: inline-block;width: 300px;height: 1000px;background-color: #ffffff;float: left;}
