--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FCXX/FCXX_ZZF.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FCXX/FCXX_ZZF.cshtml
@@ -25,6 +25,75 @@
                 <p class="p_div_body_left_head_bt">大儒世家新出精装2房 高层设备齐全 别墅社区 品质 </p>
                 <p class="p_div_body_left_head_ll">11月5日 22:36 3次浏览 </p>
             </div>
+            <div class="div_body_left_body">
+                <div class="div_body_left_body_left">
+                    <img class="img_body_left_body_left_show" src="@Url.Content("~/Areas/Business/Css/images/test.jpg")"/>
+                    <ul class="ul_body_left_body_left_list">
+                        <li class="li_body_left_body_left_list_an" style='margin-right: 10px;'>
+                            <
+                        </li>
+                        <li class="li_body_left_body_left_list_tp">
+                            <img class="img_body_left_body_left_list_tp" src="@Url.Content("~/Areas/Business/Css/images/test.jpg")"/>
+                            <div class="div_img_body_left_body_left_list_tp"></div>
+                        </li>
+                        <li class="li_body_left_body_left_list_tp">
+                            <img class="img_body_left_body_left_list_tp" src="@Url.Content("~/Areas/Business/Css/images/test.jpg")"/>
+                            <div class="div_img_body_left_body_left_list_tp"></div>
+                        </li>
+                        <li class="li_body_left_body_left_list_tp">
+                            <img class="img_body_left_body_left_list_tp" src="@Url.Content("~/Areas/Business/Css/images/test.jpg")"/>
+                            <div class="div_img_body_left_body_left_list_tp"></div>
+                        </li>
+                        <li class="li_body_left_body_left_list_tp">
+                            <img class="img_body_left_body_left_list_tp" src="@Url.Content("~/Areas/Business/Css/images/test.jpg")"/>
+                            <div class="div_img_body_left_body_left_list_tp"></div>
+                        </li>
+                        <li class="li_body_left_body_left_list_an">
+                            >
+                        </li>
+                    </ul>
+                </div>
+                <div class="div_body_left_body_right">
+                    <p class="p_body_left_body_right_first">
+                        <span class="span_body_left_body_right_zj">1800</span><span class="span_body_left_body_right_zjdw">元/月</span>
+                        <span class="span_body_left_body_right_yffs">押二付一</span>
+                    </p>
+                    <p class="p_body_left_body_right">
+                        <span class="span_body_left_body_right_left">出租方式：</span>
+                        <span class="span_body_left_body_right_right">整租</span>
+                    </p>
+                    <p class="p_body_left_body_right">
+                        <span class="span_body_left_body_right_left">房屋类型：</span>
+                        <span class="span_body_left_body_right_right">3室2厅1卫 121平 简单装修</span>
+                    </p>
+                    <p class="p_body_left_body_right">
+                        <span class="span_body_left_body_right_left">朝向楼层：</span>
+                        <span class="span_body_left_body_right_right">南 中层/共33层</span>
+                    </p>
+                    <p class="p_body_left_body_right">
+                        <span class="span_body_left_body_right_left">所在小区：</span>
+                        <span class="span_body_left_body_right_right">徽贵苑</span>
+                    </p>
+                    <p class="p_body_left_body_right">
+                        <span class="span_body_left_body_right_left">所属区域：</span>
+                        <span class="span_body_left_body_right_right">滨湖新区 滨湖世纪城</span>
+                    </p>
+                    <p class="p_body_left_body_right">
+                        <span class="span_body_left_body_right_left">详细地址：</span>
+                        <span class="span_body_left_body_right_right">万泉河路</span>
+                    </p>
+                    <p class="p_body_left_body_right_lxdh">
+                        <img class="img_body_left_body_right_lxdh" src="@Url.Content("~/Areas/Business/Css/images/lxdh.png")"/>16897484154
+                    </p>
+                </div>
+            </div>
+            <div class="div_body_left_body_xxxx">
+                <p class="p_body_left_body_xxxx">详细信息</p>
+                <p class="p_body_left_body_fyxq">房源详情</p>
+                <ul class="ul_body_left_body_fyxq">
+                    <li class="ul_body_left_body_fyxq"></li>
+                </ul>
+            </div>
         </div>
         <div class="div_body_right">
             
