--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/XXXX/FCXX.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/XXXX/FCXX.css
@@ -7,17 +7,48 @@
 .div_head_left {float: left;width: 120px;margin-top: 5px;}
 .div_head_left .img_head_left_logo {width: 100%;text-align: center;color: white;font-size: 25px;float: left;width: 155px;height: 55px;}
 
-
+/*首页_导航*/
 .div_nav { width: 1200px;height: 28px;display: block;}
 .div_nav .ul_nav { width: 100%;padding: 0;}
 .div_nav .ul_nav .li_nav_font{ float: left;font-size: 13px;}
 .div_nav .ul_nav .li_nav_split{ float: left;margin-left: 10px;margin-right: 10px;}
 
-.div_body{display: block;width: 1200px;height: 1000px;background-color: #ffffff;}
-.div_body .div_body_left{display: inline-block;width: 880px;height: 1000px;background-color: #ffffff;float: left;padding: 10px;}
-.div_body .div_body_left .div_body_left_head{ height: 135px;width: 100%;border-bottom: 1px solid #cccccc;}
+/*首页_主体*/
+.div_body{display: block;width: 1200px;height: 1000px;}
+/*首页_主体_左部*/
+.div_body .div_body_left{display: inline-block;width: 880px;border: 1px solid #cccccc;border-radius: 2px;height: 1000px;background-color: #ffffff;float: left;padding: 10px;}
+/*首页_主体_左部_标题*/
+.div_body .div_body_left .div_body_left_head{ height: 120px;width: 100%;border-bottom: 1px solid #cccccc;}
 .div_body .div_body_left .div_body_left_head .p_div_body_left_head_bt{ display: block;font-size: 20px;font-weight: 700;height: 40px;padding: 10px;}
 .div_body .div_body_left .div_body_left_head .p_div_body_left_head_ll{ display: block;color: #999999;height: 40px;padding: 10px;}
+/*首页_主体_左部_信息主要内容*/
+.div_body .div_body_left .div_body_left_body{ width: 100%;height: 470px;margin-top: 20px;}
+.div_body .div_body_left .div_body_left_body_left{ width: 470px;height: 475px;float: left;}
+.div_body .div_body_left .div_body_left_body_left .img_body_left_body_left_show{ width: 460px;height: 350px;}
+.div_body .div_body_left .div_body_left_body_left .img_body_left_body_left_show:hover{ cursor: pointer;}
+.div_body .div_body_left .div_body_left_body_left .ul_body_left_body_left_list{ width: 460px;height: 76px;padding: 0;margin-top: 10px;}
+.div_body .div_body_left .div_body_left_body_left .ul_body_left_body_left_list .li_body_left_body_left_list_an{float: left;height: 76px;width: 25px;font-size: 20px;background-color: rgba(0, 0, 0, 0.3);color: #ffffff;padding: 25px 5px;}
+.div_body .div_body_left .div_body_left_body_left .ul_body_left_body_left_list .li_body_left_body_left_list_an:hover{ cursor: pointer;background-color: rgba(0, 0, 0, 0.6);}
+.div_body .div_body_left .div_body_left_body_left .ul_body_left_body_left_list .li_body_left_body_left_list_tp{float: left;height: 76px;margin-right: 10px;width: 90px;position: relative;}
+.div_body .div_body_left .div_body_left_body_left .ul_body_left_body_left_list .li_body_left_body_left_list_tp:hover{ cursor: pointer;}
+.div_body .div_body_left .div_body_left_body_left .ul_body_left_body_left_list .li_body_left_body_left_list_tp .img_body_left_body_left_list_tp{ width: 90px;height: 76px;}
+.div_body .div_body_left .div_body_left_body_left .ul_body_left_body_left_list .li_body_left_body_left_list_tp .div_img_body_left_body_left_list_tp{ position: absolute;width: 90px;height: 76px;top: 0;left: 0;background-color: rgba(0, 0, 0, 0.5); }
+.div_body .div_body_left .div_body_left_body_left .ul_body_left_body_left_list .li_body_left_body_left_list_tp .div_img_body_left_body_left_list_tp:hover{background-color: rgba(0, 0, 0, 0);}
+.div_body .div_body_left .div_body_left_body_right{ width: 380px;height: 475px;float: left;}
+.div_body .div_body_left .div_body_left_body_right .p_body_left_body_right_first{ height: 40px;width: 100%;padding: 0px 30px;}
+.div_body .div_body_left .div_body_left_body_right .span_body_left_body_right_zj{ color: #ef6100;font-size: 35px;font-weight: 700;}
+.div_body .div_body_left .div_body_left_body_right .span_body_left_body_right_zjdw{ color: #ef6100;font-size: 16px;}
+.div_body .div_body_left .div_body_left_body_right .span_body_left_body_right_yffs{ font-size: 16px;margin-left: 30px; }
+.div_body .div_body_left .div_body_left_body_right .p_body_left_body_right{ height: 30px;width: 100%;padding: 20px 30px;}
+.div_body .div_body_left .div_body_left_body_right .span_body_left_body_right_left{ color: #999999;float: left;}
+.div_body .div_body_left .div_body_left_body_right .span_body_left_body_right_right{ float: left;margin-left: 20px;}
+.div_body .div_body_left .div_body_left_body_right .p_body_left_body_right_lxdh{ border: 1px solid #ef6100;margin: 30px;padding: 16px 30px;width: 290px;height: 70px;font-size: 28px;color: #ef6100;}
+.div_body .div_body_left .div_body_left_body_right .p_body_left_body_right_lxdh .img_body_left_body_right_lxdh{ width: 25px;height: 25px;margin-right: 10px;}
+/*首页_主体_左部_信息详细内容*/
+.div_body .div_body_left .div_body_left_body_xxxx{ height: 60px;border-bottom: 1px solid #cccccc;}
+.div_body .div_body_left .div_body_left_body_xxxx .p_body_left_body_xxxx{ font-size: 18px;font-weight: 700;height: 60px;}
+.div_body .div_body_left .div_body_left_body_xxxx .p_body_left_body_fyxq{ height: 20px;font-size: 18px;height: 30px;}
+.div_body .div_body_left .div_body_left_body_xxxx .ul_body_left_body_fyxq{ height: 60px;width: 100%;}
+.div_body .div_body_left .div_body_left_body_xxxx .ul_body_left_body_fyxq .li_body_left_body_fyxq{}
 
-
-.div_body .div_body_right{display: inline-block;width: 300px;height: 1000px;background-color: #ffffff;float: left;}
+.div_body .div_body_right{float: left;display: inline-block;border-radius: 2px;width: 300px;height: 1000px;margin-left: 20px;}
